# hybrid-experiment

./: Dockerfile  Dockerfile_test  README.md  docker-compose.yml  pyproject.toml  web.dockerfile
server/: app.py  conftest.py  database.py  pyproject.toml  test_app.py  todo_item.py
server/app/: app.py  test_app.py
server/features/todos/: routes.py
server/templates/: app.html
web/: app.js  package.json
web/client/: entry.js  package.json
web/client/App/: index.js
web/views/: index.pug
