[tool.poetry]
name = "hybrid-experiment"
version = "0.1.0"
description = ""
authors = ["Melissa Labbe <melissa-labbe@pluralsight.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8.4"
marshmallow = "^3.3.0"
fastapi = "^0.46.0"
uvicorn = "^0.11.1"
jinja2 = "^2.10.3"
sqlalchemy = "^1.3.12"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
